Fix reversal of the layers when importing .kra as layers

The patch also disables the renaming of the "Background" layer
when the image contains multiple layers.

BUG:514760